fix - switched from Open AI to Gemini API